--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="Two angel statues on architecture." /></span>
 								<div class="capped">Picture by Min An.</div>
-								<p>Currently, there isn't much to put in this section. You can see what little projects I have on my <a href="https://github.com/sicklesium">GitHub</a>. <strong>Under Construction...</strong></p>
+								<p>Remember, you can always see more on my <a href="https://github.com/sicklesium">GitHub</a>.</p>
+
+								<img class="smallimg" src="images/art app.png">
+								<p><strong>Art App</strong><br>
+									Part of the first Build Week in Lambda School, I was a UI Designer for the Art Portfolio website. We came up with Art App, a place to build a community surrounding one's art.<br>
+									<a href="https://userinterface.sicklesium.now.sh/">Demo</a> | <a href="https://github.com/sicklesium/User_Interface">GitHub</a></p>
 							</article>
 
 						<!-- About -->
